idk waht this is

--- a/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -206,10 +206,10 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell
-ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Items
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters
+ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/UI
+ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Items
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Enemies
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/FunctionLibrary
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Hero
@@ -231,9 +231,6 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
@@ -241,22 +238,33 @@ RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=UserDefinedStructureEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/BenPowell/BP_AutoBGameMode.BP_AutoBGameMode
+OpenAssetsAtExit=/Game/BenPowell/BP_AutoBGamePlayerController.BP_AutoBGamePlayerController
+OpenAssetsAtExit=/Game/BenPowell/BP_BattleManager.BP_BattleManager
+OpenAssetsAtExit=/Game/BenPowell/BP_MenuManager.BP_MenuManager
+OpenAssetsAtExit=/Game/BenPowell/Characters/Items/ItemManager.ItemManager
+OpenAssetsAtExit=/Game/BenPowell/BP_MainView.BP_MainView
+OpenAssetsAtExit=/Game/BenPowell/Characters/Items/InventoryItemsTable.InventoryItemsTable
+OpenAssetsAtExit=/Game/BenPowell/Characters/Items/itemValues.itemValues
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -273,7 +281,7 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 
 [RootWindow]
-ScreenPosition=X=144.000 Y=16.000
+ScreenPosition=X=-1776.000 Y=16.000
 WindowSize=X=1292.000 Y=732.000
 InitiallyMaximized=True
 
@@ -1564,8 +1572,8 @@ StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.Defa
 BrushComponent=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.InitiativeArray
 TextRenderActor=TextRenderActor.Materials.MaterialList
 SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableGet.DefaultValueCategory.AliveTags,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,PropertyWrapper.DefaultValueCategory.AliveTags,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
-BP_BaseCharacter_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
-K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableGet.DefaultValueCategory.AliveTags,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
+BP_BaseCharacter_C=
+K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableGet.DefaultValueCategory.AliveTags,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 BP_MainView_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableGet.DefaultValueCategory.AliveTags,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,PropertyWrapper.DefaultValueCategory.AliveTags,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableGet.DefaultValueCategory.AliveTags,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,PropertyWrapper.DefaultValueCategory.AliveTags,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 K2Node_VariableSet=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
@@ -1641,7 +1649,7 @@ CrashReporterSettings=InputSettings.Platforms.InputPlatformSettings_Windows,Inpu
 GameplayDebuggerUserSettings=InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Next Action,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 GameplayTagsDeveloperSettings=InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Next Action,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 LogVisualizerSettings=InputSettings.Platforms.InputPlatformSettings_Windows,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Next Action,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
-MulticastInlineDelegatePropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
+MulticastInlineDelegatePropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_VariableGet.DefaultValueCategory.AliveTags,K2Node_VariableSet.DefaultValueCategory.Struct,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,PropertyWrapper.DefaultValueCategory.Struct,PropertyWrapper.DefaultValueCategory.Max Stats,PropertyWrapper.DefaultValueCategory.AliveTags,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 GamerOver_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 Button_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.InitiativeArray,K2Node_CallFunction.Inputs.F826DBC74AB3C5D2B288DB9B6813A239,PropertyWrapper.DefaultValueCategory.InitiativeArray,MulticastInlineDelegatePropertyWrapper.DelegateInputs.49DCC4014E9C1B044E77C390328B6C93
 PlayerController=
@@ -2838,27 +2846,27 @@ BP_AutoBGamePlayerController_C.Networking=True
 K2Node_GetClassDefaults.PinOptions=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BenPowell/Characters/Items/ItemManager
-MRUItem1=/Game/BenPowell/FunctionLibrary/DataTableFunctions
-MRUItem2=/Game/BenPowell/UI/StartMenu
-MRUItem3=/Game/BenPowell/BP_MenuManager
-MRUItem4=/Game/BenPowell/Characters/BP_BaseCharacter
-MRUItem5=/Game/BenPowell/Characters/BPC_Hero
-MRUItem6=/Game/BenPowell/Characters/BPC_Enemy
-MRUItem7=/Game/BenPowell/Characters/Enemies/EnemyStat
-MRUItem8=/Game/BenPowell/Characters/Enemies/EnemyDataTable
-MRUItem9=/Game/BenPowell/BP_BattleManager
-MRUItem10=/Game/BenPowell/BP_AutoBGamePlayerController
-MRUItem11=/Game/BenPowell/BP_AutoBGameMode
-MRUItem12=/Game/BenPowell/Characters/Items/itemValues
-MRUItem13=/Game/BenPowell/BP_MainView
-MRUItem14=/Game/BenPowell/UI/EquipMenu
-MRUItem15=/Game/BenPowell/Characters/Items/Woops/BaseInventoryItem
-MRUItem16=/Game/BenPowell/Characters/Items/Woops/BigArmour
-MRUItem17=/Game/BenPowell/Characters/Items/Woops/BigArmourComponent
-MRUItem18=/Game/BenPowell/Characters/Items/Woops/BigSword
-MRUItem19=/Game/BenPowell/Characters/Items/Woops/InventoryComponent
-MRUItem20=/Game/BenPowell/Characters/Items/InventoryItemsTable
+MRUItem0=/Game/BenPowell/Characters/BP_BaseCharacter
+MRUItem1=/Game/BenPowell/Characters/BPC_Enemy
+MRUItem2=/Game/BenPowell/Characters/BPC_Hero
+MRUItem3=/Game/BenPowell/Characters/Items/itemValues
+MRUItem4=/Game/BenPowell/Characters/Items/InventoryItemsTable
+MRUItem5=/Game/BenPowell/BP_MainView
+MRUItem6=/Game/BenPowell/Characters/Items/ItemManager
+MRUItem7=/Game/BenPowell/BP_MenuManager
+MRUItem8=/Game/BenPowell/BP_BattleManager
+MRUItem9=/Game/BenPowell/BP_AutoBGamePlayerController
+MRUItem10=/Game/BenPowell/BP_AutoBGameMode
+MRUItem11=/Game/BenPowell/FunctionLibrary/DataTableFunctions
+MRUItem12=/Game/BenPowell/UI/StartMenu
+MRUItem13=/Game/BenPowell/Characters/Enemies/EnemyStat
+MRUItem14=/Game/BenPowell/Characters/Enemies/EnemyDataTable
+MRUItem15=/Game/BenPowell/UI/EquipMenu
+MRUItem16=/Game/BenPowell/Characters/Items/Woops/BaseInventoryItem
+MRUItem17=/Game/BenPowell/Characters/Items/Woops/BigArmour
+MRUItem18=/Game/BenPowell/Characters/Items/Woops/BigArmourComponent
+MRUItem19=/Game/BenPowell/Characters/Items/Woops/BigSword
+MRUItem20=/Game/BenPowell/Characters/Items/Woops/InventoryComponent
 MRUItem21=/Game/BenPowell/UI/Opening
 MRUItem22=/Game/BenPowell/UI/GamerOver
 MRUItem23=/Engine/EditorBlueprintResources/StandardMacros
@@ -3223,7 +3231,7 @@ K2Node_BreakStruct="\"Object\" "
 K2Node_StructMemberGet="\"Object\" "
 BPC_Hero_C="\"Object\" \"Object.Actor.Tags\" "
 BP_BaseCharacter_C="\"Object\" \"Object.Actor.Tags\" "
-BPC_Enemy_C="\"Object\" "
+BPC_Enemy_C="\"Object\" \"Object.Actor.Tags\" "
 K2Node_GetClassDefaults="\"Object\" "
 
 [DetailCategoriesAdvanced]
@@ -3256,10 +3264,10 @@ RecentlyPlaced=/Game/BenPowell/Characters/BP_BaseCharacter.BP_BaseCharacter;
 /Game/BenPowell/BP_AutoBGameMode.BP_AutoBGameMode=0
 /Game/BenPowell/BP_MainView.BP_MainView=0
 /Game/BenPowell/BP_AutoBGamePlayerController.BP_AutoBGamePlayerController=0
-/Game/BenPowell/Characters/BP_BaseCharacter.BP_BaseCharacter=0
+/Game/BenPowell/Characters/BP_BaseCharacter.BP_BaseCharacter=1
 /Game/BenPowell/BP_BattleManager.BP_BattleManager=0
-/Game/BenPowell/Characters/BPC_Enemy.BPC_Enemy=0
-/Game/BenPowell/Characters/BPC_Hero.BPC_Hero=0
+/Game/BenPowell/Characters/BPC_Enemy.BPC_Enemy=1
+/Game/BenPowell/Characters/BPC_Hero.BPC_Hero=1
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
 /Game/BenPowell/UI/GamerOver.GamerOver=1
 /Game/BenPowell/UI/Button.Button=0
@@ -3304,8 +3312,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
