talking about trees

--- a/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/BenPowellPrototype/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -134,6 +134,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=2554
 NewWindowHeight=1352
+LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -211,15 +212,15 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/MapSide/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/MapSide
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/UI
 ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/Characters
+ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/MapSide/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/FunctionLibrary
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters
 ContentBrowserDrawer.JumpMRU=/All/Game/Cursor
-ContentBrowserDrawer.JumpMRU=/All/Game/Characters
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Enemies
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Items/Woops
 ContentBrowserDrawer.JumpMRU=/All/Game/BenPowell/Characters/Items
@@ -240,12 +241,12 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=UserDefinedStructureEditor
@@ -272,6 +273,9 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 OpenAssetsAtExit=/Game/BenPowell/MapSide/BP_Map.BP_Map
 OpenAssetsAtExit=/Game/BenPowell/MapSide/BP_Node.BP_Node
+OpenAssetsAtExit=/Game/BenPowell/BP_BattleManager.BP_BattleManager
+OpenAssetsAtExit=/Game/BenPowell/Characters/BP_BaseCharacter.BP_BaseCharacter
+OpenAssetsAtExit=/Game/BenPowell/MapSide/DT_EventCreation.DT_EventCreation
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1449,9 +1453,9 @@ MaterialEditor.LastCompileMethod=External
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Unreal Engine/New folder/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
 MRUItem0=/Game/TopDown/Maps/TopDownMap
@@ -3052,12 +3056,12 @@ BP_MapCamera_C.Networking=True
 BP_MapCamera_C.Actor=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BenPowell/MapSide/BP_Node
-MRUItem1=/Game/BenPowell/MapSide/BP_Map
-MRUItem2=/Game/BenPowell/MapSide/DT_EventCreation
-MRUItem3=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem4=/Game/BenPowell/Characters/BP_BaseCharacter
-MRUItem5=/Game/BenPowell/BP_BattleManager
+MRUItem0=/Game/BenPowell/MapSide/DT_EventCreation
+MRUItem1=/Game/BenPowell/Characters/BP_BaseCharacter
+MRUItem2=/Game/BenPowell/BP_BattleManager
+MRUItem3=/Game/BenPowell/MapSide/BP_Node
+MRUItem4=/Game/BenPowell/MapSide/BP_Map
+MRUItem5=/Engine/EditorBlueprintResources/StandardMacros
 MRUItem6=/Game/BenPowell/MapSide/Materials/M_Selected
 MRUItem7=/Game/BenPowell/MapSide/Materials/M_Possible
 MRUItem8=/Game/BenPowell/MapSide/Materials/M_Non
@@ -3439,7 +3443,7 @@ K2Node_Variable="\"Object\" "
 K2Node_BreakStruct="\"Object\" "
 K2Node_StructMemberGet="\"Object\" "
 BPC_Hero_C="\"Object\" "
-BP_BaseCharacter_C="\"Object\" \"Object.Actor.Tags\" "
+BP_BaseCharacter_C="\"Object\" "
 BPC_Enemy_C="\"Object\" \"Object.Actor.Tags\" "
 K2Node_GetClassDefaults="\"Object\" "
 Actor="\"Object\" "
@@ -3571,8 +3575,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
